library/src/libqabstractproxymodel.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractProxyModel QAbstractProxyModel;
typedef struct QItemSelection QItemSelection;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QObject QObject;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
QTLIBC_API QAbstractProxyModel* QAbstractProxyModel_new();
QTLIBC_API QAbstractProxyModel* QAbstractProxyModel_new2(QObject* parent);
QTLIBC_API QMetaObject* QAbstractProxyModel_MetaObject(const QAbstractProxyModel* self);
QTLIBC_API void* QAbstractProxyModel_Metacast(QAbstractProxyModel* self, const char* param1);
QTLIBC_API int QAbstractProxyModel_Metacall(QAbstractProxyModel* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QAbstractProxyModel_Tr(const char* s);
QTLIBC_API void QAbstractProxyModel_SetSourceModel(QAbstractProxyModel* self, QAbstractItemModel* sourceModel);
QTLIBC_API QAbstractItemModel* QAbstractProxyModel_SourceModel(const QAbstractProxyModel* self);
QTLIBC_API QModelIndex* QAbstractProxyModel_MapToSource(const QAbstractProxyModel* self, QModelIndex* proxyIndex);
QTLIBC_API QModelIndex* QAbstractProxyModel_MapFromSource(const QAbstractProxyModel* self, QModelIndex* sourceIndex);
QTLIBC_API QItemSelection* QAbstractProxyModel_MapSelectionToSource(const QAbstractProxyModel* self, QItemSelection* selection);
QTLIBC_API QItemSelection* QAbstractProxyModel_MapSelectionFromSource(const QAbstractProxyModel* self, QItemSelection* selection);
QTLIBC_API bool QAbstractProxyModel_Submit(QAbstractProxyModel* self);
QTLIBC_API void QAbstractProxyModel_Revert(QAbstractProxyModel* self);
QTLIBC_API QVariant* QAbstractProxyModel_Data(const QAbstractProxyModel* self, QModelIndex* proxyIndex, int role);
QTLIBC_API QVariant* QAbstractProxyModel_HeaderData(const QAbstractProxyModel* self, int section, int orientation, int role);
QTLIBC_API libqt_map /* of int to QVariant* */ QAbstractProxyModel_ItemData(const QAbstractProxyModel* self, QModelIndex* index);
QTLIBC_API int QAbstractProxyModel_Flags(const QAbstractProxyModel* self, QModelIndex* index);
QTLIBC_API bool QAbstractProxyModel_SetData(QAbstractProxyModel* self, QModelIndex* index, QVariant* value, int role);
QTLIBC_API bool QAbstractProxyModel_SetItemData(QAbstractProxyModel* self, QModelIndex* index, libqt_map /* of int to QVariant* */ roles);
QTLIBC_API bool QAbstractProxyModel_SetHeaderData(QAbstractProxyModel* self, int section, int orientation, QVariant* value, int role);
QTLIBC_API bool QAbstractProxyModel_ClearItemData(QAbstractProxyModel* self, QModelIndex* index);
QTLIBC_API QModelIndex* QAbstractProxyModel_Buddy(const QAbstractProxyModel* self, QModelIndex* index);
QTLIBC_API bool QAbstractProxyModel_CanFetchMore(const QAbstractProxyModel* self, QModelIndex* parent);
QTLIBC_API void QAbstractProxyModel_FetchMore(QAbstractProxyModel* self, QModelIndex* parent);
QTLIBC_API void QAbstractProxyModel_Sort(QAbstractProxyModel* self, int column, int order);
QTLIBC_API QSize* QAbstractProxyModel_Span(const QAbstractProxyModel* self, QModelIndex* index);
QTLIBC_API bool QAbstractProxyModel_HasChildren(const QAbstractProxyModel* self, QModelIndex* parent);
QTLIBC_API QModelIndex* QAbstractProxyModel_Sibling(const QAbstractProxyModel* self, int row, int column, QModelIndex* idx);
QTLIBC_API QMimeData* QAbstractProxyModel_MimeData(const QAbstractProxyModel* self, libqt_list /* of QModelIndex* */ indexes);
QTLIBC_API bool QAbstractProxyModel_CanDropMimeData(const QAbstractProxyModel* self, QMimeData* data, int action, int row, int column, QModelIndex* parent);
QTLIBC_API bool QAbstractProxyModel_DropMimeData(QAbstractProxyModel* self, QMimeData* data, int action, int row, int column, QModelIndex* parent);
QTLIBC_API libqt_list /* of libqt_string */ QAbstractProxyModel_MimeTypes(const QAbstractProxyModel* self);
QTLIBC_API int QAbstractProxyModel_SupportedDragActions(const QAbstractProxyModel* self);
QTLIBC_API int QAbstractProxyModel_SupportedDropActions(const QAbstractProxyModel* self);
QTLIBC_API libqt_map /* of int to libqt_string */ QAbstractProxyModel_RoleNames(const QAbstractProxyModel* self);
QTLIBC_API libqt_string QAbstractProxyModel_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QAbstractProxyModel_Tr3(const char* s, const char* c, int n);
QTLIBC_API QModelIndex* QAbstractProxyModel_CreateSourceIndex(const QAbstractProxyModel* self, int row, int col, void* internalPtr);
QTLIBC_API void QAbstractProxyModel_Delete(QAbstractProxyModel* self);