src/qt/libqabstractproxymodel.bf

	
	public void* BindingStorage2()
	{
		return CQt.QObject_BindingStorage2(this.nativePtr);
	}
	
	public bool Inherits(char8[] classname)
	{
		return CQt.QObject_Inherits(this.nativePtr, classname);
	}
	
	public void DeleteLater()
	{
		CQt.QObject_DeleteLater(this.nativePtr);
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return CQt.QObject_StartTimer2(this.nativePtr, interval, timerType);
	}
	
	public static QMetaObject__Connection Connect5(void* sender, void* signal, void* receiver, void* method, int64 typeVal)
	{
		return CQt.QObject_Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public QMetaObject__Connection Connect4(void* sender, char8[] signal, char8[] member, int64 typeVal)
	{
		return CQt.QObject_Connect4(this.nativePtr, sender, signal, member, typeVal);
	}
	
}
extension CQt
{
	[LinkName("QAbstractProxyModel_new")]
	public static extern void* QAbstractProxyModel_new();
	[LinkName("QAbstractProxyModel_new2")]
	public static extern void* QAbstractProxyModel_new2(void* parent);
	[LinkName("QAbstractProxyModel_MetaObject")]
	public static extern void* QAbstractProxyModel_MetaObject(void* c_this);
	[LinkName("QAbstractProxyModel_Metacast")]
	public static extern void* QAbstractProxyModel_Metacast(void* c_this, char8[] param1);
	[LinkName("QAbstractProxyModel_Metacall")]
	public static extern int32 QAbstractProxyModel_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QAbstractProxyModel_Tr")]
	public static extern libqt_string QAbstractProxyModel_Tr(char8[] s);
	[LinkName("QAbstractProxyModel_SetSourceModel")]
	public static extern void QAbstractProxyModel_SetSourceModel(void* c_this, void* sourceModel);
	[LinkName("QAbstractProxyModel_SourceModel")]
	public static extern void* QAbstractProxyModel_SourceModel(void* c_this);
	[LinkName("QAbstractProxyModel_MapToSource")]
	public static extern void QAbstractProxyModel_MapToSource(void* c_this, void* proxyIndex);
	[LinkName("QAbstractProxyModel_MapFromSource")]
	public static extern void QAbstractProxyModel_MapFromSource(void* c_this, void* sourceIndex);
	[LinkName("QAbstractProxyModel_MapSelectionToSource")]
	public static extern void QAbstractProxyModel_MapSelectionToSource(void* c_this, void* selection);
	[LinkName("QAbstractProxyModel_MapSelectionFromSource")]
	public static extern void QAbstractProxyModel_MapSelectionFromSource(void* c_this, void* selection);
	[LinkName("QAbstractProxyModel_Submit")]
	public static extern bool QAbstractProxyModel_Submit(void* c_this);
	[LinkName("QAbstractProxyModel_Revert")]
	public static extern void QAbstractProxyModel_Revert(void* c_this);
	[LinkName("QAbstractProxyModel_Data")]
	public static extern void QAbstractProxyModel_Data(void* c_this, void* proxyIndex, int32 role);
	[LinkName("QAbstractProxyModel_HeaderData")]
	public static extern void QAbstractProxyModel_HeaderData(void* c_this, int32 section, int64 orientation, int32 role);
	[LinkName("QAbstractProxyModel_ItemData")]
	public static extern void* QAbstractProxyModel_ItemData(void* c_this, void* index);
	[LinkName("QAbstractProxyModel_Flags")]
	public static extern int64 QAbstractProxyModel_Flags(void* c_this, void* index);
	[LinkName("QAbstractProxyModel_SetData")]
	public static extern bool QAbstractProxyModel_SetData(void* c_this, void* index, void* value, int32 role);
	[LinkName("QAbstractProxyModel_SetItemData")]
	public static extern bool QAbstractProxyModel_SetItemData(void* c_this, void* index, void* roles);
	[LinkName("QAbstractProxyModel_SetHeaderData")]
	public static extern bool QAbstractProxyModel_SetHeaderData(void* c_this, int32 section, int64 orientation, void* value, int32 role);
	[LinkName("QAbstractProxyModel_ClearItemData")]
	public static extern bool QAbstractProxyModel_ClearItemData(void* c_this, void* index);
	[LinkName("QAbstractProxyModel_Buddy")]
	public static extern void QAbstractProxyModel_Buddy(void* c_this, void* index);
	[LinkName("QAbstractProxyModel_CanFetchMore")]
	public static extern bool QAbstractProxyModel_CanFetchMore(void* c_this, void* parent);
	[LinkName("QAbstractProxyModel_FetchMore")]
	public static extern void QAbstractProxyModel_FetchMore(void* c_this, void* parent);
	[LinkName("QAbstractProxyModel_Sort")]
	public static extern void QAbstractProxyModel_Sort(void* c_this, int32 column, int64 order);
	[LinkName("QAbstractProxyModel_Span")]
	public static extern void QAbstractProxyModel_Span(void* c_this, void* index);
	[LinkName("QAbstractProxyModel_HasChildren")]
	public static extern bool QAbstractProxyModel_HasChildren(void* c_this, void* parent);
	[LinkName("QAbstractProxyModel_Sibling")]
	public static extern void QAbstractProxyModel_Sibling(void* c_this, int32 row, int32 column, void* idx);
	[LinkName("QAbstractProxyModel_MimeData")]
	public static extern void* QAbstractProxyModel_MimeData(void* c_this, void[] indexes);
	[LinkName("QAbstractProxyModel_CanDropMimeData")]
	public static extern bool QAbstractProxyModel_CanDropMimeData(void* c_this, void* data, int64 action, int32 row, int32 column, void* parent);
	[LinkName("QAbstractProxyModel_DropMimeData")]
	public static extern bool QAbstractProxyModel_DropMimeData(void* c_this, void* data, int64 action, int32 row, int32 column, void* parent);
	[LinkName("QAbstractProxyModel_MimeTypes")]
	public static extern libqt_string[] QAbstractProxyModel_MimeTypes(void* c_this);
	[LinkName("QAbstractProxyModel_SupportedDragActions")]
	public static extern int64 QAbstractProxyModel_SupportedDragActions(void* c_this);
	[LinkName("QAbstractProxyModel_SupportedDropActions")]
	public static extern int64 QAbstractProxyModel_SupportedDropActions(void* c_this);
	[LinkName("QAbstractProxyModel_RoleNames")]
	public static extern void* QAbstractProxyModel_RoleNames(void* c_this);
	[LinkName("QAbstractProxyModel_CreateSourceIndex")]
	public static extern void QAbstractProxyModel_CreateSourceIndex(void* c_this, int32 row, int32 col, void* internalPtr);
	[LinkName("QAbstractProxyModel_Tr2")]
	public static extern libqt_string QAbstractProxyModel_Tr2(char8[] s, char8[] c);
	[LinkName("QAbstractProxyModel_Tr3")]
	public static extern libqt_string QAbstractProxyModel_Tr3(char8[] s, char8[] c, int32 n);
	/// Delete this object from C++ memory
	[LinkName("QAbstractProxyModel_Delete")]
	public static extern void QAbstractProxyModel_Delete(void* self);
}